Added a shadow to Experience.
Project items in Experience now have a gray box shadow.

--- a/personalWebsite/scriptsAndFiles/resume.css
+++ b/personalWebsite/scriptsAndFiles/resume.css
@@ -250,6 +250,7 @@ h3 {
     display: inline-block;
     background: radial-gradient(white, gray);
     overflow: hidden;
+    box-shadow: 10px 10px 5px gray;
 }
 
 .project-item h3 {
