--- a/personalWebsite/scriptsAndFiles/resume.css
+++ b/personalWebsite/scriptsAndFiles/resume.css
@@ -250,7 +250,7 @@ h3 {
     display: inline-block;
     background: radial-gradient(white, gray);
     overflow: hidden;
-    box-shadow: 10px 10px 5px gray;
+    box-shadow: 7px 7px 5px #404040	;
 }
 
 .project-item h3 {
