--- a/Kinematic_Calculator/CSS/kinematic_calculator.css
+++ b/Kinematic_Calculator/CSS/kinematic_calculator.css
@@ -3,6 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Start of header. */
 header {
   overflow: hidden;
   background-color: black;
@@ -23,14 +24,22 @@ header a:hover {
   background-color: darkgrey;
 }
 
-header a.title {
+header a#title {
   float: left;
   border-left: none;
   border-right: 1px solid darkgrey;
-  font-size: 18px;
 }
 
+#about-description {
+	background-color: darkgrey;
+	display: none;
+}
+/* End of header. */
+
+
+/* Start of footer. */
 footer {
 	background-color: grey;
 	color: white;
 }
+/* End of footer. */
