--- a/Kinematic_Calculator/CSS/kinematic_calculator.css
+++ b/Kinematic_Calculator/CSS/kinematic_calculator.css
@@ -1,6 +1,11 @@
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  padding: 0;
+}
+
+body {
+  font-family: 'Roboto Mono', monospace;
+  background-color: black
 }
 
 /* Start of header. */
@@ -36,10 +41,53 @@ header a#title {
 }
 /* End of header. */
 
+/* Start of Main. */
+main {
+	background: linear-gradient(gray, white);
+	padding: 5rem 0rem;
+}
+
+#equations, form {
+	display: inline-block;
+}
+
+#equations {
+	height: 300px;
+	width: 700px;
+}
+/* End of Main */
+
 
 /* Start of footer. */
 footer {
 	background-color: grey;
 	color: white;
+}
+
+footer {
+  margin: 0;
+  background-color: black;
+  color: white;
+  text-align: center;
+}
+
+.link {
+  display: inline-block;
+  text-align: center;
+  padding: 2em;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+}
+
+#contact-section a:hover {
+  animation: animateIcons 2s linear infinite;
+}
+
+@keyframes animateIcons {
+  50% {color: goldenrod;}
 }
 /* End of footer. */
