--- a/Personal_Website/CSS/resume.css
+++ b/Personal_Website/CSS/resume.css
@@ -290,7 +290,7 @@ h3 {
   display: grid;
   background: radial-graident(gray, white);
   text-align: center;
-  grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
   grid-gap: 20px;
   margin: 10px 10px 50px 10px;
 }
