--- a/Kinematic_Calculator/CSS/kinematic_calculator.css
+++ b/Kinematic_Calculator/CSS/kinematic_calculator.css
@@ -53,7 +53,7 @@ main {
 	padding: 5rem 0rem;
 }
 
-#equations, form {
+#equations, form, #results {
 	display: inline-block;
 }
 
@@ -61,6 +61,8 @@ main {
 	height: 300px;
 	width: 700px;
 }
+
+
 /* End of Main */
 
 
