localStorage changed to sessionStorage.

--- a/Kinematic_Calculator/CSS/kinematic_calculator.css
+++ b/Kinematic_Calculator/CSS/kinematic_calculator.css
@@ -86,8 +86,16 @@ form {
 	width: 100%;
 }
 
-#submit:hover {
+#submit:hover, #clear:hover {
 	cursor: pointer;
+}
+
+#submit {
+	margin-right: 10%;
+}
+
+#clear {
+	margin-left: 10%;
 }
 /* End of Main */
 
