--- a/Kinematic_Calculator/CSS/kinematic_calculator.css
+++ b/Kinematic_Calculator/CSS/kinematic_calculator.css
@@ -6,10 +6,7 @@
 body {
   margin: 0;
   padding: 0;
-}
-
-body {
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
   background-color: black
 }
 
