--- a/Pomodoro_Timer/CSS/pomodoro_timer.css
+++ b/Pomodoro_Timer/CSS/pomodoro_timer.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto Mono", monospace;
+  background-color:  #ff9966;
 }
 
 /* Start of footer. */
