--- a/Pomodoro_Timer/CSS/pomodoro_timer.css
+++ b/Pomodoro_Timer/CSS/pomodoro_timer.css
@@ -30,6 +30,28 @@ header {
 #about, #instructions {
 	position: relative;
 	top: 15px;
+	cursor: pointer;
+}
+
+#about:before, #instructions:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+#about:hover:before, #instructions:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
 
 #title {
@@ -47,7 +69,7 @@ header {
 
 /* Start of main. */
 main {
-	background-color: #fff;
+	background-color: white;
 	padding: 100px 0;
 }
 /* End of main. */
@@ -70,7 +92,7 @@ footer a:hover {
 }
 
 @keyframes footer-link {
-  50% {box-shadow: 100px 0px 100px 10px #ffd980; color: #ffd980;}
+  50% { box-shadow: 100px 0px 100px 10px #ffd980; color: #ffd980; }
 }
 
 /* End of footer. */
