--- a/Pomodoro_Timer/CSS/pomodoro_timer.css
+++ b/Pomodoro_Timer/CSS/pomodoro_timer.css
@@ -128,15 +128,47 @@ footer {
 footer a {
 	display: inline-block;
 	color: white;
+	transition: all 0.4s;
 }
 
-footer a:hover {
+footer a:before, footer a:after {
+	content: "";
+	border: 3px solid white;
+	transform: scaleX(0);
+}
+
+/*footer a:hover {
 	animation: footer-link 2.5s linear 0s infinite normal;
 	color: black;
 }
 
 @keyframes footer-link {
-  50% { box-shadow: 100px 0px 100px 10px #ffd980; color: #ffd980; }
+  50% { color: black; }
+}*/
+
+footer a:hover {
+	border: 1px solid white
 }
+
+/*#about:before, #instructions:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+#about:hover:before, #instructions:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}*/
 
 /* End of footer. */
