--- a/Pomodoro_Timer/CSS/pomodoro_timer.css
+++ b/Pomodoro_Timer/CSS/pomodoro_timer.css
@@ -101,6 +101,11 @@ main {
 	padding: 50px 0;
 }
 
+caption {
+	font-size: 20px;
+	font-weight: bold;
+}
+
 .button {
 	font-size: 20px;
 	color: white;
