--- a/Pomodoro_Timer/CSS/pomodoro_timer.css
+++ b/Pomodoro_Timer/CSS/pomodoro_timer.css
@@ -119,6 +119,12 @@ caption {
 	cursor: pointer;
 }
 
+.mode:active, .button:active {
+	background-color: white;
+	color: black;
+	cursor: pointer;
+}
+
 caption {
 	text-align: center;
 }
@@ -158,7 +164,7 @@ footer a {
 }*/
 
 footer a:hover {
-	border: 1px solid white
+	color: black;
 }
 
 /*#about:before, #instructions:before {
